# tvorenie-testov

./: README.md
llist/: .gladiator.yml  CMakeLists.txt  check_formatter  problemset.yml  template.xml
llist/student/: llist.c  llist.h
llist/tests/: CMakeLists.txt  default.c  test_llist.c
lqueue/: .gladiator.yml  CMakeLists.txt  problemset.yml  template.xml
lqueue/student/: err.h  lqueue.c  lqueue.h
lqueue/tests/: CMakeLists.txt  default.c  err.h  test_lqueue.c  test_runner.c
lstack/: .gladiator.yml  CMakeLists.txt  Dockerfile  check_formatter  problemset.yml  template.xml
lstack/student/: lstack.c
lstack/tests/: CMakeLists.txt  default.c  test_lstack.c
tree_arr/: .gladiator.yml  CMakeLists.txt  problemset.yml  template.xml
tree_arr/student/: tree_arr.c  tree_arr.h
tree_arr/tests/: CMakeLists.txt  default.c  test_tree_arr.c  tree_arr.h
